--- a/index.html
+++ b/index.html
@@ -14,39 +14,40 @@
             <section class="display"></section>
             
             <section class="pad-grid-container">
-                <div data-value="/" class="digit-input">
+                <div data-value="/" class="divide digit-input input-btn">
                     <i data-feather="divide"></i>
                 </div>
-                <div data-value="x" class="digit-input">
+                <div data-value="x" class="times digit-input input-btn">
                     <i data-feather="x"></i>
                 </div>
-                <div data-value="-" class="digit-input">
+                <div data-value="-" class="minus digit-input input-btn">
                     <i data-feather="minus"></i>
                 </div>
-                <div data-value="+" class="digit-input">
+                <div data-value="+" class="plus digit-input input-btn">
                     <i data-feather="plus"></i>
                 </div>
-                <div class="equals">=</div>
+                <div class="equals input-btn">
+                    =
+                </div>
                 <div class="grid-numbers-block">
-                    <div class="digit-input" data-value="9">9</div>
-                    <div class="digit-input" data-value="8">8</div>
-                    <div class="digit-input" data-value="7">7</div>
-                    <div class="digit-input" data-value="6">6</div>
-                    <div class="digit-input" data-value="5">5</div>
-                    <div class="digit-input" data-value="4">4</div>
-                    <div class="digit-input" data-value="3">3</div>
-                    <div class="digit-input" data-value="2">2</div>
-                    <div class="digit-input" data-value="1">1</div>
-                    <div class="digit-input" data-value="0">0</div>
-                    <div class="clear-all">CA</div>
-                    <div class="clear">C</div>
+                    <div class="input-btn digit-input nine" data-value="9">9</div>
+                    <div class="input-btn digit-input eight" data-value="8">8</div>
+                    <div class="input-btn digit-input seven" data-value="7">7</div>
+                    <div class="input-btn digit-input six" data-value="6">6</div>
+                    <div class="input-btn digit-input five" data-value="5">5</div>
+                    <div class="input-btn digit-input four" data-value="4">4</div>
+                    <div class="input-btn digit-input three" data-value="3">3</div>
+                    <div class="input-btn digit-input two" data-value="2">2</div>
+                    <div class="input-btn digit-input one" data-value="1">1</div>
+                    <div class="input-btn digit-input zero" data-value="0">0</div>
+                    <div class="input-btn clear-all">CA</div>
+                    <div class="input-btn clear">C</div>
                 </div>
             </section>
-
-
         </section>
     </main>
     <script src="js/script.js"></script>
+    <script src="js/animation.js"></script>
     <script>feather.replace()</script>
 </body>
 </html>
