--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <main>
+        <i class="open-about" data-open-target="#about" data-feather="help-circle"></i>
+        <h2>Vanilla JS <span>Calculator</span></h2>
         <section class="calculator">
             <section class="display"></section>
             
@@ -45,9 +47,26 @@
                 </div>
             </section>
         </section>
+
+        <div class="overlay"></div> 
+        <section class="pop-up" id="about">
+            <i data-feather="x-circle" data-close-target class="close-about"></i>
+            <h2>About the project</h2>
+            <p><span><strong>Calculator developed with Vanilla JavaScript</strong></span>, using concepts learned in about 2 month with the leanguge.
+            </p>
+            <nav id="github-project-link">
+                <a target="_blank" href="https://github.com/HenriquePinheiro12/VanillaJS-Cronometer">Visit it on Github!</a>
+            </nav>
+            <h2>Follow me</h2>
+            <nav>
+                <p><a target="_blank" href="https://github.com/henriquepinheiro12"><i data-feather="github"></i>HenriquePinheiro12</a></p>
+                <p><a target="_blank" href="https://www.linkedin.com/in/henrique-pinheiro-a43b62203/"><i data-feather="linkedin"></i>Henrique Pinheiro</a></p>
+            </nav>
+        </section>
     </main>
+    <script>feather.replace()</script>
     <script src="js/script.js"></script>
     <script src="js/animation.js"></script>
-    <script>feather.replace()</script>
+    <script src="js/pop-up.js"></script>
 </body>
 </html>
