css updated and optimized

--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
 
         <div class="overlay"></div> 
         <section class="pop-up" id="about">
-            <i data-feather="x-circle" data-close-target class="close-about"></i>
-            <h2>About the project</h2>
-            <p><span><strong>Calculator developed with Vanilla JavaScript</strong></span>, using concepts learned in about 2 month with the leanguge.
+            <i data-feather="x-circle" data-close-target class="sec-clr close-about"></i>
+            <h2 class="sec-clr">About the project</h2>
+            <p><span class="sec-clr"><strong>Calculator developed with Vanilla JavaScript</strong></span>, using concepts learned in about 2 month with the leanguge.
             </p>
             <nav id="github-project-link">
                 <a target="_blank" href="https://github.com/HenriquePinheiro12/VanillaJS-Calculator">Visit it on Github!</a>
             </nav>
-            <h2>Follow me</h2>
+            <h2 class="sec-clr">Follow me</h2>
             <nav>
-                <p><a target="_blank" href="https://github.com/henriquepinheiro12"><i data-feather="github"></i>HenriquePinheiro12</a></p>
-                <p><a target="_blank" href="https://www.linkedin.com/in/henrique-pinheiro-a43b62203/"><i data-feather="linkedin"></i>Henrique Pinheiro</a></p>
+                <p><a target="_blank" href="https://github.com/henriquepinheiro12"><i class="sec-clr" data-feather="github"></i>HenriquePinheiro12</a></p>
+                <p><a target="_blank" href="https://www.linkedin.com/in/henrique-pinheiro-a43b62203/"><i class="sec-clr" data-feather="linkedin"></i>Henrique Pinheiro</a></p>
             </nav>
         </section>
     </main>
